--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>ndzk.github.io</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>soon</h1>
