--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <title>ndzk.github.io</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
+        <meta name="author" content="ndzk">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="work in progress">
     </head>
     <body>
         <h1>soon</h1>
